게시판 따라하기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+ 
+spring.datasource.driver-class-name= com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username= root
+spring.datasource.password= 12345
+ 
+file.upload.directory = D:\\java\\sts3.9.9\\workspace\\hansboard\\src\\main\\webapp\\WEB-INF\\uploadFiles\\
 
