--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,27 @@
             <artifactId>mybatis</artifactId>
             <version>3.4.2</version>
         </dependency>
+        
+        <!-- JSTL -->
+        <dependency>
+               <groupId>jstl</groupId>
+               <artifactId>jstl</artifactId>
+               <version>1.2</version>
+          </dependency>
+          
+              <!--Multipart File Up&Download -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
+
  
 	</dependencies>
 
